--- a/source/aboutwindow.ui
+++ b/source/aboutwindow.ui
@@ -69,7 +69,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="images.qrc">:/icons/icon_app_big</pixmap>
+    <pixmap resource="../images.qrc">:/icons/resources/images/icon_app_big</pixmap>
    </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
@@ -92,7 +92,7 @@
        </font>
       </property>
       <property name="text">
-       <string>TreeGP</string>
+       <string>LeafGP</string>
       </property>
      </widget>
     </item>
@@ -124,7 +124,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="images.qrc"/>
+  <include location="../images.qrc"/>
  </resources>
  <connections>
   <connection>
